hphp/hack/test/typecheck/inout/bad_inout_decl_async_generator.php
<?hh

async function gen_void(): Awaitable<void> {}

async function gen_test(inout string $s): AsyncIterator<int> {
  await gen_void();
  yield 42;
}
